Show placeholder button to avoid jumpy layout

--- a/client/src/assets/style/_form.css
+++ b/client/src/assets/style/_form.css
@@ -79,9 +79,15 @@ button {
   transition: opacity var(--transition-time) ease;
 }
 
+[type=button][disabled],
+button[disabled] {
+  cursor: default;
+  opacity: 0.5;
+}
+
 .button:not(span):hover,
-[type="button"]:hover,
-button:hover {
+[type="button"]:not([disabled]):hover,
+button:not(disabled):hover {
   opacity: 0.8;
 }
 
